fixed navbar spacing for content class in index.css

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,13 +1,18 @@
 h1 {
-    color: #EADDCF;
+    color: #eaddcf;
     font-size: 50px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h3 {
-    color: #EADDCF;
+    color: #eaddcf;
     font-size: 25px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 body {
